# ArtMine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
JIT_loader/: CMakeLists.txt  loader_main.cpp
JIT_loader/include/: loader_main.h
block_core/: CMakeLists.txt  block.cpp
block_core/include/: block.h
core/: CMakeLists.txt  index.cpp
core/block/: block.cpp
core/block/include/: block.h
core/client/: run_client.cpp
core/client/include/: run_client.h
core/entity/: player.cpp
core/entity/include/: player.h
core/include/: index.h
core/server/: run_server.cpp
core/server/include/: run_server.h
core/server/world/: world_generater.cpp
core/world/: world_generater.cpp  world_struct.cpp
core/world/include/: world_generater.h  world_struct.h
docs/: api.md
element/: CMakeLists.txt
element/block/: block.cpp  dirt.cpp  stone.cpp  water.cpp
element/block/include/: block.h  blocks.h  dirt.h  stone.h  water.h
element/item/: item.cpp
element/item/include/: item.h
file_operator/: CMakeLists.txt
file_operator/linux/: file_operator.cpp  file_operator_linux.cpp  mod_loader.cpp  script_loader.cpp
file_operator/linux/include/: file_operator_linux.h  mod_loader.h  script_loader.h
file_operator/windows/: file_operator_windows.cpp  mod_loader.cpp  script_loader.cpp
file_operator/windows/include/: file_operator.h  mod_loader.h  script_loader.h
interact/: CMakeLists.txt
interact/linux/: renderer.cpp
interact/windows/renderer/: renderer.cpp  renderer_windows.cpp
log/: CMakeLists.txt  log.cpp
log/include/: log.h
mods/: CMakeLists.txt  air.cpp  water.cpp
mods/include/: air.h  water.h
render/linux/: render_linux.cpp  render_linux.h
render/windows/: render_windows.cpp  render_windows.h
renderer/: CMakeLists.txt
renderer/linux/: renderer_linux.cpp
renderer/windows/: renderer_windows.cpp
signal/: CMakeLists.txt  am_signal.cpp
signal/include/: am_signal.h
